# LLVM_CD_FunctionInlining_with_DeadCodeElimination

./: .gitignore  CMakeLists.txt  README.md  app.py  build.sh  export_data.py  run.sh
.github/workflows/: ci.yml
docs/: DESIGN.md  EVALUATION.md  IMPLEMENTATION.md
src/: InlinePass.cpp
static/: data.js  index.html  main.js  style.css
tests/: chain_inline.c  chain_inline.ll  large_func.c  large_func.ll  mixed.c  mixed.ll  mixed_recursive.c  mixed_recursive.ll  multi_call.c  multi_call.ll  multi_func.c  multi_func.ll  mutual_recursive.c  mutual_recursive.ll  only_dce.c  recursive_func.c  recursive_func.ll  single_use.c  single_use.ll  small_func.c  small_func.ll
tests/ll/: chain_inline.ll  large_func.ll  mixed.ll  mixed_recursive.ll  multi_call.ll  multi_func.ll  mutual_recursive.ll  only_dce.ll  recursive_func.ll  single_use.ll  small_func.ll
tests/output/: chain_inline_after.c  chain_inline_after.ll  large_func_after.c  large_func_baseline.ll  mixed_after.c  mixed_after.ll  mixed_baseline.ll  mixed_recursive_after.c  mixed_recursive_after.ll  multi_call_after.c  multi_call_after.ll  multi_func_after.c  multi_func_after.ll  multi_func_baseline.ll  mutual_recursive_after.c  mutual_recursive_after.ll  only_dce_after.c  only_dce_after.ll  only_dce_baseline.ll  recursive_func_after.c  single_use_after.c  single_use_after.ll  single_use_baseline.ll  small_func_after.c  small_func_after.ll  small_func_baseline.ll
